# MengeConfig

./: .gitignore  MengeConfig.sln  README.md  releaseNotes.txt
MengeConfig/: BuildEnvironment.props  CMakeLists.txt  MengeConfig.aps  MengeConfig.rc  MengeConfig.vcxproj  MengeConfig.vcxproj.filters  Moc.props  QReferenceGrid.cpp  QReferenceGrid.h  ReferenceGrid.h  main.cpp  resource.h
MengeConfig/src/main/: AppLogger.cpp  AppLogger.hpp  BaseLogger.cpp  BaseLogger.h  ContextManager.cpp  ContextManager.hpp  DrawPolygonContext.cpp  DrawPolygonContext.h  DrawPolygonWidget.cpp  DrawPolygonWidget.hpp  EditPolygonContext.cpp  EditPolygonContext.h  EditPolygonWidget.cpp  EditPolygonWidget.hpp  FSMViewer.cpp  FSMViewer.hpp  GLPolygon.cpp  GLPolygon.h  GridNode.cpp  GridNode.h  LiveObstacleSet.cpp  LiveObstacleSet.h  MCException.h  MengeConfig.qrc  ObstacleContext.cpp  ObstacleContext.hpp  ObstacleContextWidget.cpp  ObstacleContextWidget.hpp  PedestrianModelDialog.cpp  PedestrianModelDialog.hpp  QReferenceGrid.cpp  QtContext.cpp  QtContext.h  ReferenceGrid.cpp  ReferenceGrid.h  SceneHierarchy.cpp  SceneHierarchy.hpp  SceneViewer.cpp  SceneViewer.hpp  ToolProperties.cpp  (+17 more)
MengeConfig/src/main/images/: gridProperties.psd  gridSnapHorizontal.psd  gridSnapVertical.psd  toggleAxis.psd  toggleGrid.psd  togglePersp.psd
